syntax = "proto3";
import "test_discovery.proto";
import "test_run.proto";

option csharp_namespace = "TestRunner.Contract.Grpc.V1";

package processing_notification_service;

service ProcessingNotificationService {
  rpc Subscribe(SubscribeRequest) returns (stream Notification);
}

message SubscribeRequest {
  string userId = 1;
}



message Notification {
  string requestId = 1;
  oneof content {
    //Tests discovery section 
    TestsDiscoveryFinishedNotification testsDiscoveryFinishedNotification = 2;
    TestsDiscoveryUpdatedNotification testsDiscoveryUpdatedNotification = 3;
    TestsDiscoveryFailedNotification testsDiscoveryFailedNotification = 4;
    TestsRunFinishedNotification testsRunFinishedNotification = 5;
    TestsRunUpdatedNotification testsRunUpdatedNotification = 6;
  }
}