syntax = "proto3";

option csharp_namespace = "TestRunner.Contract.Grpc.V1";

package processing_notification_service;


message TestCase{
  string id = 1;
  string displayName = 2;
  string fullyQualifiedName = 3;
  string ExecutorUri=4;
  string Source=5;
  
}
message TestsDiscoveryFinishedNotification {
  repeated TestCase testCases = 1;
}
message TestsDiscoveryUpdatedNotification{
  repeated TestCase testCases = 1;
}
message TestsDiscoveryFailedNotification{
  string failMessage = 1;
}





