syntax = "proto3";
import "test_discovery.proto";

option csharp_namespace = "TestRunner.Contract.Grpc.V1";

package processing_notification_service;

enum TestOutcome
{
  None = 0;
  Passed = 1;
  Failed = 2;
  Skipped = 3;
  NotFound = 4;
}
message TestResult{
  string displayName = 1;
  int64  durationMs = 2;
  string testCaseId = 4;
  TestOutcome Outcome = 5;
  string ErrorMessage = 6;
  string ErrorStackTrace = 7;
}
message TestsRunFinishedNotification {
  repeated TestResult testResults = 1;
  int64 TotalElapsedMilliseconds = 2;
}
message TestsRunUpdatedNotification{
  repeated TestResult testResults = 1;
  repeated TestCase activeTestCases = 2;
}
message TestsRunFailedNotification{
  string failMessage = 1;
}





